hello/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello
  labels:
    name: hello
