hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: hello
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: hello
